--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
     </scm>
 
     <properties>
-        <copyrightYear>2021</copyrightYear>
+        <copyrightYear>2022</copyrightYear>
         <copyrightNotice>Copyright ${copyrightYear} Micro Focus or one of its affiliates.</copyrightNotice>
         <maven.install.skip>true</maven.install.skip>
         <skipNexusStagingDeployMojo>true</skipNexusStagingDeployMojo>
@@ -105,7 +105,7 @@
                 <configuration>
                     <images>
                         <image>
-                            <name>${dockerCafImagePrefix}buildenv-dotnet${dockerProjectVersion}</name>
+                            <name>${dockerCafImagePrefix}buildenv-dotnet-mono${dockerProjectVersion}</name>
                             <build>
                                 <dockerFileDir>.</dockerFileDir>
                                 <args>
